Do not show encoding error when file only contains BOM

failedToConvertOnce shouldn't be set to true when
the BOM was processed.

After this commit, opening files with the following
hex content should open in the corresponding encodings:
E9		- Latin-1/ISO-8859-15
EF BB BF	- UTF-8
EF BB BF E9 FF	- Latin-1/ISO-8859-15

Then forcing the Latin-1 files above to be opened
as UTF-8 should show the "invalid encoding" error
message properly.

BUG: 440359
CCBUG: 272579